# gridops

./: .gitignore  BLOG_CARBONALPHA.md  BROTHER_BRIEF.md  Dockerfile  ENGINEERING_PROCESS.md  GRIDOPS_MODEL_CARD.md  HACKATHON_PLAN.md  MASTER_UNDERSTANDING.md  MODEL_CARD.md  MODEL_RESEARCH.md  MODEL_TRAINING_PLAYBOOK.md  PROGRESS.md  README.md  TRAINING_ERRORS.md  gemini_deep_research.py  gemini_deep_research_output.md  gemini_round2.py  inference.py  openenv.yaml  portfolio_env_design.md  pyproject.toml
carbonalpha_demo_space/: .dockerignore  Dockerfile  README.md  app.py  requirements.txt
docs/: KAGGLE_SFT_V3.md  SLM_POST_TRAINING_BOOTCAMP.md  V4_REASONING_DATASET.md
evals/: frontier_teacher_bakeoff_20260507.json  frontier_teacher_bakeoff_kimi_retry_20260507.json  gridops_curriculum_v3_tool_augmented_summary.json  gridops_curriculum_v4_kimi_reason_action_100_summary.json  gridops_curriculum_v4_kimi_reason_action_250_summary.json  gridops_curriculum_v4_kimi_reason_action_500_summary.json  gridops_curriculum_v4_kimi_reason_action_balanced_smoke_summary.json  gridops_curriculum_v4_reason_action_summary.json  gridops_do_nothing_holdout_7001_7003.json  gridops_oracle_holdout_7001_7003.json  gridops_sft_mixed1418_v1_holdout_7001_7003.json  gridops_v3_openrouter_deepseek_targeted_summary.json  gridops_v3_openrouter_gemma_pilot_summary.json  macro_eval_10.jsonl  macro_eval_10_grpo_report.json
gridops/: models.py  policies.py  prompting.py
notebooks/: carbonalpha_final_pipeline.ipynb  gridops_kaggle_sft_v3.py  gridops_kaggle_sft_v4_reasoning.py  gridops_sft_pipeline.ipynb  (+2 more)
(+118 files in other folders)
